# flutter_gstreamer_player

./: .metadata  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/hpdragon1618/flutter_gstreamer_player/: FlutterGstreamerPlayerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/hpdragon1618/flutter_gstreamer_player_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
gst_player/: Android.mk  Application.mk  flutter_gstreamer_player_plugin_android.cc  gst_player.cc  gst_player.h
ios/: flutter_gstreamer_player.podspec
ios/Classes/: BridgingHeader.h  FlutterGstreamerPlayerPlugin.h  FlutterGstreamerPlayerPlugin.m  GStreamerBackend.h  GStreamerBackend.m  SwiftFlutterGstreamerPlayerPlugin.swift  gst_ios_init.h  gst_ios_init.m
lib/: flutter_gstreamer_player.dart
linux/: CMakeLists.txt  flutter_gstreamer_player_plugin.cc
linux/include/flutter_gstreamer_player/: flutter_gstreamer_player_plugin.h  flutter_gstreamer_player_video_outlet.h
test/: flutter_gstreamer_player_test.dart
